--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "js-yaml": "^3.3.0",
-    "nedb": "^1.8.0",
+    "mongodb": "^3.5.3",
     "oas-tools": "^2.1.4"
   }
 }
